# higgsfield-memory-service

./: .dockerignore  .env.example  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_embedding_cosine_index.py
docs/: challenge.md
fixtures/: conversations.json  recall_eval.json
src/: __init__.py  main.py
src/api/: auth.py  dependencies.py  routes.py
src/db/: config.py  models.py  repository.py  session.py
src/memory/: __init__.py  embedding.py  extraction.py  types.py
src/retrieval/: __init__.py  service.py
src/schemas/: requests.py  responses.py
tests/: conftest.py  test_auth.py  test_contract.py  test_eviction.py  test_extraction.py  test_malformed_input.py  test_persistence.py  test_recall_quality.py  test_retrieval.py  test_sessions.py
